[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.12

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M The Forgotten Server.exe
	M config.lua
	  data/
	M	global.lua
		actions/scripts/other/
	M		changegold.lua
	M		fluids.lua
		items/
	M		items.otb
	M		items.xml
		monster/
	M		slime.xml
	M		slime2.xml
	M	talkactions/scripts/deathlist.lua
		XML/
	M		outfits.xml
	M		mounts.xml
]

[ Milestone
	Game protocol 9.2 support.
	Revised database system.
	Fixed element damages.
	Fixed a bug with Lua function getPlayersByIP, it was ignoring mask even if set.
	Healing messages will no longer show if health change is 0.
	Removed the config option for animation text on heal.
	Corrected the color of the healing numbers.
	Corrected the new outfit looktypes.
	Updated item description for expiration times.
	Added more mounts.
	Fixed element damage hit order.
	The teleport effect will now show up when a creature is summoned.
	Fixed hotkey message for items without showCount.
	Healing message will now be precise on how much health the creature was healed up with.
	Decay buckets are now 4, with 250ms intervals instead of 16 with 1000ms intervals for more accurate duration times (this may cause higher CPU usage).
	Added premium attribute to mounts.
	Added db and result functions to the Lua interface.
	LuaSQL dependency removed (with backwards compatibility for most code).
	Fixed a bug with vial, blue bottle, jug and waterskin.
	Updated a lot of item attributes.
	Corrected cheese and scarab cheese client id and stackable attribute.
	Fixed so that vials (fluids.lua) will use fluidSource from items.xml.
	NPC's can now be pushed by players inside their spawn radius.
	Added database manager for automatic database updates and table optimizations.
	It is now possible to register multiple creature events with the same type for one creature.
]