@@ -207,6 +207,10 @@ CONST_ME_INSECTS = 68
 CONST_ME_DRAGONHEAD = 69
 CONST_ME_ORCSHAMAN = 70
 CONST_ME_ORCSHAMAN_FIRE = 71
+CONST_ME_THUNDER = 72
+CONST_ME_FERUMBRAS = 73
+CONST_ME_CONFETTI_HORIZONTAL = 74
+CONST_ME_CONFETTI_VERTICAL = 75
 CONST_ME_NONE = 255
 
 CONST_ANI_SPEAR = 0
