@@ -23,8 +23,8 @@
 
 #define DATABASE_VERSION 0
 
-#define CLIENT_VERSION_MIN 920
-#define CLIENT_VERSION_MIN_STR "9.2"
+#define CLIENT_VERSION_MIN 940
+#define CLIENT_VERSION_MIN_STR "9.4"
 
 #ifdef _WIN32
 #ifndef WIN32
